# 2025-p2-M3ijn

./: README.md  pyproject.toml
todo/: __init__.py
todo/models/: todo.py
todo/views/: routes.py
